--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
     "tailwindcss": "^3.3.6",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "flowbite": "^2.2.1",
+    "tw-elements": "^1.1.0",
+    "vue-carousel": "^0.18.0",
+    "vue-slick-carousel": "^1.0.6"
   }
 }
