Update styles and text in AboutUs.vue, AboutUsIcons.vue, TreatmentCard.vue, and Treatments.vue

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "cross-env NUXT_HOST=0.0.0.0 NUXT_PORT=3333 nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "autoprefixer": "^10.4.16",
+    "cross-env": "^7.0.3",
     "nuxt": "^3.8.2",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
