Update firebase.json and package.json

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,7 @@
 {
   "hosting": {
-    "public": ".output/public",
+    "site": "care-landing",
+    "public": "build/web",
     "ignore": [
       "firebase.json",
       "**/.*",
